samples/_failures_safe/1761724757_8988aa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_27f54dfc.c: In function ‘matrix_input’:
./samples/SAFE/__tmp_27f54dfc.c:126:12: error: missing terminating " character
  126 |     printf("Enter dimensions for matrix
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_27f54dfc.c:126:5: error: expected expression at end of input
  126 |     printf("Enter dimensions for matrix
      |     ^~~~~~
./samples/SAFE/__tmp_27f54dfc.c:126:5: error: expected declaration or statement at end of input
